ipc/ipdl/test/ipdl/error/SyncAsyncManagee.ipdl
//error: protocol `SyncAsyncManagee' requires more powerful send semantics than its manager `SyncAsyncManager' provides

include protocol SyncAsyncManager;

[ChildProc=any]
sync protocol SyncAsyncManagee {
    manager SyncAsyncManager;
child:
    async __delete__();
};
